--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,9 @@
     font-family: "Inter", sans-serif;
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:wght@100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 body{
     font-family: "Inter", sans-serif;
 }
@@ -25,17 +28,20 @@ body{
     max-width: 1060px;
     padding: 20px;
     margin: 0 auto;
+    
         
 }
 .navbar-menu{
     border: 1px solid rgba(255, 255, 255, 0.1);
     /* background-color: aqua; */
-    justify-content: center;
-    align-items: center;
+    /* justify-items: left; */
+    /* align-items: center; */
     /* margin-right: 5px; */
-    padding: 5px;
-    border-radius: 20px;
-    height: 38px;
+    /* padding: 5px; */
+    border-radius: 39px;
+    /* height: 48px; */
+    /* text-align: center; */
+    /* align-content: first baseline; */
 }
 .navbar-btn{
     color: rgb(255, 255, 255);
@@ -43,13 +49,115 @@ body{
     font-weight: 400;
     border: none;
     margin-left: 1rem;
+    /* align-items: center; */
+
 }
 #btn-home{
     background-color: rgb(230, 83, 60);
     width: 92px;
     height: 38px;
     border-radius: 48px;
+    /* justify-content: center; */
 }
 #hampbar{
     display: none;
 }
+/*SHARED STYLE*/
+.btn-primary{
+    color: rgb(255, 255, 255);
+    width: 224px;
+    height: 54px;
+    padding: 16px 40px 16px 40px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+
+}
+.text-description{
+    color: rgba(255, 255, 255, 0.5);
+font-family: Inter;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.5px;
+text-align: left;
+}
+
+
+
+
+/*BANNER STYLE START HERE*/
+.banner-content{
+    border: 1px solid red;
+    width: 1060px;
+    display: flex;
+    margin: 0 auto;
+    height: 27.43rem;
+    margin-top: 6rem;
+    /* justify-content: space-around; */
+    
+}
+.banner-title{
+    width: 55%; 
+    border: 1px solid green;
+   
+}
+.banner-text{
+    color: rgb(255, 255, 255);
+    font-size: 4.87rem;
+    font-weight: 900;
+    /* height: 281px; */
+    line-height: 120%;
+    letter-spacing: 0%;
+
+}
+#shape{
+    font-family: "Miama", sans-serif;
+    
+}
+/* .banner-title img{
+    width: 50%;
+    justify-content: center;
+    position: absolute;
+    justify-content: space-between;
+    
+} */
+ .banner-image{
+    /* width: 50%;
+    height: 100px; */
+    position: relative;
+    border: 1px solid blue;
+    /* justify-content: space-between; */
+
+ }
+ .banner-image img{
+    /* width: 100%; */
+    height: 100%;
+    margin-left: 200px;
+ }
+ .banner-badge{
+    display: flex;
+    position: absolute;
+    width: 160px;
+    height: 70px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background-color: rgba(48, 48, 48, 0.54);
+    left: 140px;
+    top: 320px;
+    
+ }
+ .circle{
+    width: 40px;
+    height: 40px;
+    background-color: rgb(230, 83, 60);
+    border-radius: 50%;
+
+ }
+ .badge-title{
+
+ }
+ 
